--- a/资源.md
+++ b/资源.md
@@ -107,3 +107,5 @@ ipython notebook：数据科学家和算法工程师的笔记本，强力推荐
 
 [AI | 怎样快速入门机器学习和深度学习？](https://zhuanlan.zhihu.com/p/84270984)
 
+[如何用3个月零基础入门「机器学习」？](https://zhuanlan.zhihu.com/p/29704017)
+
