--- a/待办.md
+++ b/待办.md
@@ -1,6 +1,6 @@
 ## 待办
 
 * Anaconda , 虚拟环境
-* jupyter
-* 
+* jupyter    done
+* 撸一遍  [scikit-learn与svm ](https://github.com/youngxiao/SVM-demo/blob/master/svm_demo_with_sklearn.ipynb)
 
