--- a/资源.md
+++ b/资源.md
@@ -21,6 +21,8 @@
 - 斯坦福CS229机器学习（Machine Learning）- 吴恩达（Andrew Ng）：
 
   首推吴恩达的CS229，吴恩达真是天生的好老师，讲课清晰条例清楚，难度事宜，学习曲线平缓
+  
+  [B站链接]（https://www.bilibili.com/video/BV164411b7dx?from=search&seid=1797682590741646721）
 
 *  机器学习基石和机器学习技法-林轩田：
 
@@ -74,6 +76,8 @@ numpy：数值计算库，快的不要不要的。
 matplotlib：模仿MATLAB的数据可视化工具。
 
 scikit-learn：封装超级好的机器学习库，一些简便的算法用起来不要太顺手。
+
+​					   其框架代码写的好，[文档](https://scikit-learn.org/stable/user_guide.html)写的也好，建议学习
 
 ipython notebook：数据科学家和算法工程师的笔记本，强力推荐
 
