--- a/CS229/2-7. 线性回归的梯度下降.md
+++ b/CS229/2-7. 线性回归的梯度下降.md
@@ -12,9 +12,9 @@
 
 
 
+## “Batch” Gradient Descent   
 
-
-“Batch” Gradient Descent   全览整个训练集    $\sum_{i=1}^m$ m是训练解样本个数
+全览整个训练集    $\sum_{i=1}^m$ m是训练解样本个数
 
 "Batch": Each steps of gradient descent uses all the training examples.
 
