--- a/CS229/2-2. 代价函数.md
+++ b/CS229/2-2. 代价函数.md
@@ -1,6 +1,6 @@
 ##  cost function 
 
-回归问题最常用：
+回归问题最常用的代价函数：
 
 ![](..\image\NG_代价函数.png)
 
@@ -9,8 +9,6 @@ squared error function 平方误差函数
 或
 
 square error loss function 平方误差代价函数
-
-
 
 
 
@@ -24,4 +22,4 @@ square error loss function 平方误差代价函数
 
 ## 那么，下一个问题
 
-如何能 **自动地** 找到使 `目标函数` 满足的那些 `参数` parameters
+如何能 **自动地** 找到使 `目标函数` 满足达到最小值的那些 `参数` parameters
