--- a/CS229/4-3. 多元梯度下降-特征缩放.md
+++ b/CS229/4-3. 多元梯度下降-特征缩放.md
@@ -1,14 +1,14 @@
 # Gradient descent in practice I: Feature Scaling
 
-为了更快的收敛
+目的：为了更快的收敛
 
-## 除以最大值
+## 方式1. 除以最大值
 
 ![](..\image\NG_多元梯度下降-特征缩放.png)
 
 
 
-## 均值归一化 
+## 方式2. 均值归一化 
 
 Mean normalization
 
