--- a/CS229/4-4. 多元梯度下降-学习速率.md
+++ b/CS229/4-4. 多元梯度下降-学习速率.md
@@ -4,11 +4,11 @@
 
 
 
-通过查看曲线判断代价函数是否收敛
+## 通过查看曲线判断代价函数是否收敛
 
-x轴是迭代次数
+注：x轴是迭代次数
 
-自动判断收敛测试（但阈值 $ \epsilon $ 不好确定）
+自动判断收敛测试（但阈值 $ \epsilon $ 不好确定）
 
 ![1619577007552](..\image\1619577007552.png)
 
