--- a/CS229/4-5. 特征和多项式回归.md
+++ b/CS229/4-5. 特征和多项式回归.md
@@ -2,7 +2,7 @@
 
 多项式回归  polynomial regression
 
-
+## 特征的选择
 
 一个特征的三次函数 (一元三次多项式)----> 三个特征的一次函数（三元一次多项式）
 
@@ -10,6 +10,10 @@
 
 
 
-特征的选择
+**此种方式下，一定要对特性做特征缩放。**因为这些新的特征基本上都是原有特征的二次方，三次方等等，所以这些特性的范围将相差较大，影响收敛速度。 
+
+
+
+针对下图的特征数据，如果选择二次方特征会出现虚线部分不符合，改用开根号的特征则会更符合需求：
 
 ![1619580360037](..\image\1619580360037.png)
