--- a/CS229/7-1. 过拟合问题.md
+++ b/CS229/7-1. 过拟合问题.md
@@ -1,10 +1,25 @@
 # The problem of overfitting
 
-欠拟合 under-fitting , high bias
+欠拟合 under-fitting , high bias 高偏差
 
 过拟合 over-fitting, high variance 高方差
 
 泛化 generalize
 
+
+
+归回：
+
 ![1619666799089](..\image\1619666799089.png)
 
+分类
+
+![1619679092522](..\image\1619679092522.png)
+
+## 解决办法
+
+Addressing overfitting
+
+当特征变量很多时，无法通过可视化来识别
+
+![1619679406816](..\image\1619679406816.png)
