--- a/CS229/8-5. 例子与直觉理解I.md
+++ b/CS229/8-5. 例子与直觉理解I.md
@@ -2,5 +2,19 @@
 
 
 
+XOR/XNOR运算函数
+
 ![1619773156632](..\image\1619773156632.png)
+
+
+
+AND运算函数
+
+![image-20210502093851376](..\image\image-20210502093821102.png)
+
+
+
+OR运算函数
+
+![image-20210502094048171](..\image\image-20210502094048171.png)
 
