--- a/CS229/9-1. 代价函数.md
+++ b/CS229/9-1. 代价函数.md
@@ -4,3 +4,10 @@
 
 
 
+![image-20210503085124829](..\image\image-20210503085124829.png)
+
+
+
+定义代价函数
+
+![image-20210503085927175](..\image\image-20210503085927175.png)
