--- a/CS229/9-2. 反向传播算法.md
+++ b/CS229/9-2. 反向传播算法.md
@@ -17,3 +17,15 @@
 $\Delta$ : capital of $\delta$ 
 
 ![image-20210503092225231](..\image\image-20210503092225231.png)
+
+
+
+导数 derivative
+
+![image-20210504223103876](..\image\image-20210504223103876.png)
+
+
+
+但是这种检测的速度很慢，在完成检测后需要关闭掉。否则程序会非常慢
+
+![image-20210504223401602](..\image\image-20210504223401602.png)
