--- a/CS229/9-4. 使用注意：展开参数.md
+++ b/CS229/9-4. 使用注意：展开参数.md
@@ -1,2 +1,9 @@
 # Implementation note: Unrolling parameters
 
+将矩阵展开成向量
+
+语言中的 reshape函数
+
+
+
+![image-20210504221328774](..\image\image-20210504221328774.png)
