--- a/CS229/10-2. 评价假设.md
+++ b/CS229/10-2. 评价假设.md
@@ -1,2 +1,22 @@
 # Evaluating a hypothesis
 
+如何判断是否过拟合？  泛化 generalize
+
+将数据 Data set分为：
+
+* 训练集 training set
+
+* 测试集 test set
+
+![1620610258741](..\image\1620610258741.png)
+
+回归：
+
+![1620610371255](..\image\1620610371255.png)
+
+分类：
+
+0/1错误分类度量
+
+![1620610604282](..\image\1620610604282.png)
+
