--- a/资源.md
+++ b/资源.md
@@ -107,6 +107,12 @@ ipython notebook：数据科学家和算法工程师的笔记本，强力推荐
 
 
 
+### 四、其他
+
+[机器学习初学者](http://ai-start.com/)
+
+
+
 ## 参考
 
 [AI | 怎样快速入门机器学习和深度学习？](https://zhuanlan.zhihu.com/p/84270984)
