--- a/CS229/15-1. 异常检测：动机.md
+++ b/CS229/15-1. 异常检测：动机.md
@@ -6,3 +6,15 @@
 
 主要用于非监督学习
 
+![1620955769877](..\image\1620955769877.png)
+
+![1620955911629](..\image\1620955911629.png)
+
+
+
+欺诈检测，计算机集群检测
+
+![1620956163334](..\image\1620956163334.png)
+
+
+
